After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781081 - Abnormal high memory consumption
Abnormal high memory consumption
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: General
3.22.x
Other Linux
: Normal major
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-04-09 05:01 UTC by Luya Tshimbalanga
Modified: 2017-04-18 10:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Status of memory (32.81 KB, image/png)
2017-04-09 05:01 UTC, Luya Tshimbalanga
  Details
Calender memory usage on system monitor (25.67 KB, text/plain)
2017-04-18 03:29 UTC, Luya Tshimbalanga
  Details
window: remove GSourceFunc once run (854 bytes, patch)
2017-04-18 03:32 UTC, Mohammed Sadiq
committed Details | Review

Description Luya Tshimbalanga 2017-04-09 05:01:38 UTC
Created attachment 349540 [details]
Status of memory

While looking at the memory consumption, gnome-calendar service has the highest usage with over 5 GiB alone in the background which is unacceptable for such application. The issues comes from updated Fedora 25 Workstation running on Gnome 3.22.x.
Comment 1 Georges Basile Stavracas Neto 2017-04-17 18:46:59 UTC
I've been receiving a few reports about that too, but I couldn't manage to reproduce this issue a single time since it was reported. Can you please run Calendar with Valgrind and try to reproduce that? (I know it's a long shot, but still, no easy answer).
Comment 2 Luya Tshimbalanga 2017-04-18 03:29:27 UTC
Created attachment 349968 [details]
Calender memory usage on system monitor

Valgrind is installed and run the command to get information. Calendar still uses higher than 5GB memory.
Comment 3 Mohammed Sadiq 2017-04-18 03:32:20 UTC
Created attachment 349973 [details] [review]
window: remove GSourceFunc once run

The function is supposed to run once every minute. So after
the function is run, just remove it from main thread. So that it won't
act as a time bomb.
Comment 4 Georges Basile Stavracas Neto 2017-04-18 10:45:09 UTC
(In reply to Luya Tshimbalanga from comment #2)

> Valgrind is installed and run the command to get information. Calendar still
> uses higher than 5GB memory.

Hi Luya... Thanks for the Valgrind log! However, as it is, it doesn't help too much. Could you please run valgrind with "--leak-check=full" too? That way, valgrind will print all memory leaks it finds.
Comment 5 Georges Basile Stavracas Neto 2017-04-18 10:52:01 UTC
Review of attachment 349973 [details] [review]:

Nice! Thanks for chasing that sneaky thieve down :)
Comment 6 Georges Basile Stavracas Neto 2017-04-18 10:56:03 UTC
Thanks for the patch! If the memory consumption doesn't go down, please reopen this bug.

Attachment 349973 [details] pushed as 1c9686b - window: remove GSourceFunc once run