window: remove GSourceFunc once run

The function is supposed to run once every minute. So after
the function is run, just remove it from main thread. So that it won't
act as a time bomb.

https://bugzilla.gnome.org/show_bug.cgi?id=781081